[gd_scene load_steps=10 format=3 uid="uid://tyws5rflxnhk"]

[ext_resource type="Script" path="res://Script/note.gd" id="1_1wlfc"]
[ext_resource type="Texture2D" uid="uid://cwo5txj40dgii" path="res://Sprites/N3.png" id="2_q1qo7"]
[ext_resource type="Texture2D" uid="uid://c57n5hesg3ow8" path="res://Sprites/N2.png" id="3_pgn62"]
[ext_resource type="Texture2D" uid="uid://bqtg23gvw2h6e" path="res://Sprites/N1.png" id="4_qpqpa"]
[ext_resource type="Texture2D" uid="uid://buyv15hh0lcrm" path="res://Sprites/N4.png" id="5_xh0fj"]
[ext_resource type="Texture2D" uid="uid://cvel6vcq6lldg" path="res://Sprites/P.png" id="6_kifu4"]
[ext_resource type="Texture2D" uid="uid://dbfdr6xscprx4" path="res://Sprites/N5.png" id="6_xui6e"]

[sub_resource type="SpriteFrames" id="SpriteFrames_u8ym2"]
animations = [{
"frames": [ExtResource( "4_qpqpa" ), ExtResource( "3_pgn62" ), ExtResource( "2_q1qo7" ), ExtResource( "5_xh0fj" ), ExtResource( "6_xui6e" )],
"loop": true,
"name": &"a",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kqnjm"]
size = Vector2(18, 6)

[node name="Area2D" type="Area2D" groups=["note"]]
script = ExtResource( "1_1wlfc" )

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
frames = SubResource( "SpriteFrames_u8ym2" )
animation = &"a"
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.18557e-08, -1)
shape = SubResource( "RectangleShape2D_kqnjm" )

[node name="Node2D" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Node2D"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -31.0
offset_right = 38.0
offset_bottom = -8.0
horizontal_alignment = 1
vertical_alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(0, -10)
emitting = false
amount = 16
lifetime = 0.3
one_shot = true
explosiveness = 0.8
texture = ExtResource( "6_kifu4" )
emission_shape = 2
emission_sphere_radius = 1.0
spread = 180.0
initial_velocity_min = 100.0
initial_velocity_max = 100.0
linear_accel_min = -100.0
linear_accel_max = -100.0
radial_accel_max = 2.34
angle_max = 360.0
scale_amount_min = 0.5
scale_amount_max = 1.5

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.05

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
